--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "role-based access control application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": " ./server/server.js"
   },
   "repository": {
     "type": "git",
